# HAMi-core

./: .gitignore  BRANCHES_SUMMARY.txt  BRANCH_COMPARISON.md  CHANGES.md  CHANGES_DRAC.md  CMakeLists.txt  CONTRIBUTING.md  EXISTING_MULTIPROCESS_MEMORY_ARCHITECTURE.md  EXIT_CLEANUP_APPROACH.md  MULTIPROCESS_FLOW_DIAGRAMS.md  Makefile  OPTION4_LOCKFREE_ANALYSIS.md  OPTION5C_SEMAPHORE_POSTINIT.md  OPTION5D_FIX_DETECTION_AND_DEADLOCK.md  OPTION5_ELIMINATE_FILE_LOCK.md  OWNERS  PRECISE_MEMORY_ACCOUNTING.md  QUICK_TEST_REFERENCE.md  README.md  README_CN.md  README_JA.md  README_SOFTMIG.md  SOLUTION_COMPARISON.md  STALE_STATE_FIX.md  TEST_SUITE_DOCUMENTATION.md  build.sh  run_comprehensive_tests.sh  test_comprehensive.cu  test_race_conditions.sh  test_seqlock_accuracy.cu
.github/workflows/: build-src.yml  style.yaml  sync-submodule.yaml
dockerfiles/: Dockerfile  build_image.sh
docs/: DEPLOYMENT_DRAC.md  GPU_LIMITER_EXPLANATION.md  performance-optimizations.md  slurm.conf.example
docs/examples/: epilog_softmig.sh  install_softmig.sh  job_submit_softmig.lua  prolog_softmig.sh  slurm_gres.conf  slurm_job_submit.lua  slurm_partitions.conf  slurm_task_epilog.sh  slurm_task_prolog.sh  softmig_wrapper.sh
docs/superpowers/notes/: 2026-04-28-cuda-hook-audit.md  2026-04-28-vk-dispatch-lifetime-audit.md  2026-04-28-vk-trace-isaac-sim.md
etc/vulkan/implicit_layer.d/: hami.json
hack/: check_cuda_hook_consistency.py
share/hami/: hami.json
src/: CMakeLists.txt  hami_core_export.c  libsoftmig.c  libvgpu.c  log_file.c  log_utils.c  static_config.h.in  utils.c
src/allocator/: allocator.c  allocator.h
src/cuda/: context.c  device.c  event.c  graph.c  hook.c  memory.c  stream.c
src/include/: cuda_addition_func.h.unused  fp1_global.h  hami_core_export.h  hook.h  libcuda_hook.h  libnvml_hook.h  libsoftmig.h  libvgpu.h  log_utils.h  multi_func_hook.h  nvml-subset.h  nvml_prefix.h  process_utils.h
src/multiprocess/: CMakeLists.txt  config_file.c  multiprocess_memory_limit.c  multiprocess_memory_limit.h  multiprocess_utilization_watcher.c  shrreg_tool.c
src/nvml/: hook.c  nvml_entry.c
src/vulkan/: CMakeLists.txt  budget.c  budget.h  dispatch.c  dispatch.h  hooks_alloc.c  hooks_memory.c  hooks_submit.c  layer.c  layer.h  physdev_index.c  physdev_index.h  throttle_adapter.c  throttle_adapter.h
test/: CMakeLists.txt  test_alloc.c  test_alloc_host.c  test_alloc_managed.c  test_alloc_pitch.c  test_create_3d_array.c  test_create_array.c  test_cuda_null_guards.c  test_host_alloc.c  test_host_register.c  test_mem_create.c  test_multi_gpu_utilization.cu  test_nvml_init.c  test_runtime_launch.cu
test/python/: limit_pytorch.py  limit_tensorflow2.py
test/vulkan/: test_alloc.c  test_layer.c  test_memprops.c  test_submit.c  test_throttle_adapter.c
